force-app/main/default/objects/Sales_Settings__c/Sales_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is where the Sales management parameters are defined (thresholds, limitations, etc.).</description>
    <label>Sales Settings</label>
</CustomObject>