force-app/main/default/objects/Sales_Settings__c/fields/Daily_Buyboxes_Listings_Ratio_Alert_TH__c.field-meta.xml
<CustomField>
    <fullName>Daily_Buyboxes_Listings_Ratio_Alert_TH__c</fullName>
    <defaultValue>0.3</defaultValue>
    <description>This number is used during the N.M.O. Process to define the threshold a Merchant&apos;s Buyboxes on Listings Daily Business Performance ratio value should be under.
e.g. : Buybox &lt; 30% # of listings (value will be 0.3)</description>
    <label>Daily Buyboxes Listings Ratio Alert T.H.</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>