force-app/main/default/objects/Sales_Settings__c/fields/Daily_Listings_Alert_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Daily_Listings_Alert_Threshold__c</fullName>
    <defaultValue>10</defaultValue>
    <description>This number is used during the N.M.O. Process to define the threshold a Merchant&apos;s Listings Daily Business Performance value should be above.</description>
    <label>Daily Listings Alert Threshold</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>