force-app/main/default/objects/Sales_Settings__c/fields/First_Cumulative_Sales_Threshold__c.field-meta.xml
<CustomField>
    <fullName>First_Cumulative_Sales_Threshold__c</fullName>
    <defaultValue>100</defaultValue>
    <description>First threshold a Merchant must reach to be eligible to N.M.O. 2.</description>
    <label>First Cumulative Sales Threshold</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>