force-app/main/default/objects/Sales_Settings__c/fields/Second_Cumulative_Sales_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Second_Cumulative_Sales_Threshold__c</fullName>
    <defaultValue>180</defaultValue>
    <description>Second threshold a Merchant must reach to be eligible to N.M.O. 2.</description>
    <label>Second Cumulative Sales Threshold</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>